--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
 
     <form id="feedbackForm">
         <div class="form-container">
-            <label for="freeform">Tell us how you heard about us:</label><br>
-            <textarea id="freeform" name="freeform" rows="4" cols="50" placeholder="Enter your text here..."></textarea><br>
-            <div class="prompt-container">
+            <label for="freeform">Describe your idea for the reel (e.g., topic, key message, style)</label><br>
+            <textarea id="freeform" name="freeform" rows="10" cols="50" placeholder=""></textarea><br>
+            <!--<div class="prompt-container">
                 <button type="button" id="button1" class="promptButton">Prompt 1</button>
                 <button type="button" id="button2" class="promptButton">Prompt 2</button>
             </div>
+        -->
         </div>
     </form>
  
