added loading screen

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
         <button id="fetchVideoButton" class="fetchVideoButton">Get Video</button>
         <div id="videoContainer" style="display: none;">
-            <video id="videoElement" controls width="600"></video>
+            <video id="videoElement" controls width="600" loop></video>
         </div>
     </div>
 
