--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
     <form id="feedbackForm">
         <div class="form-container">
-            <label for="freeform">Describe your idea for the reel (e.g., topic, key message, style)</label><br>
-            <textarea id="freeform" name="freeform" rows="10" cols="50" placeholder=""></textarea><br>
+            <textarea placeholder="Describe your idea for the reel &#10(e.g., topic, key message, style)" id="text" rows="4" name="text" style="overflow: hidden; word-wrap: break-word; resize: none; "></textarea>  
             <!--<div class="prompt-container">
                 <button type="button" id="button1" class="promptButton">Prompt 1</button>
                 <button type="button" id="button2" class="promptButton">Prompt 2</button>
             </div>
         -->
+            
         </div>
     </form>
  
