kinda connected Udio

--- a/index2.html
+++ b/index2.html
@@ -55,6 +55,7 @@
     <div class="textarea-container">
         <textarea id = "text" placeholder="Enter your text here..."></textarea>
         <button id = "fetchVideoButton" class="submit-button">Generate</button>
+        <button id = "generateAudio" class="submit-button">Create an audio</button>
     </div>
 
     <script src="script2.js"></script>
